<resources>
    <string name="app_name">Lab1</string>
    <string name="Header">中山大学学生信息系统</string>
    <string name="SID">学号：</string>
    <string name="Tips_SID">请输入学号</string>
    <string name="Password">密码：</string>
    <string name="Tips_PW">请输入密码</string>
    <string name="status1">学生</string>
    <string name="status2">教职工</string>
    <string name="login">登录</string>
    <string name="SignUp">注册</string>
    click_msg
</resources>
