<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="company.leon.lab1.MainActivity">

    <TextView
        android:id="@+id/Header"
        android:text="@string/Header"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
         />

    <ImageView
        android:id="@+id/imageView"
        app:srcCompat="@mipmap/sysu"
        android:layout_width="159dp"
        android:layout_height="149dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header"
        android:layout_marginTop="20dp"
         />

    <TextView
        android:id="@+id/textView_SID"
        android:text="@string/SID"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/editText_SID"
        app:layout_constraintTop_toTopOf="@+id/editText_SID"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_SID"
        android:layout_marginBottom="8dp"
        />

    <EditText
        android:id="@+id/editText_SID"
        android:hint="@string/Tips_SID"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView_SID"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <TextView
        android:id="@+id/textView_Passwd"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/editText_Passwd"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/editText_Passwd"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_Passwd"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editText_Passwd"
        android:hint="@string/Tips_PW"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/textView_Passwd"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_SID" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioButton_student"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_Passwd">

        <RadioButton
            android:id="@+id/radioButton_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status1" />

        <RadioButton
            android:id="@+id/radioButton_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/status2"
            app:layout_constraintLeft_toRightOf="@id/radioButton_student" />
    </RadioGroup>

    <Button
        android:id="@+id/Button_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/Button_staff"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
         />

    <Button
        android:id="@+id/Button_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/SignUp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/Button_student"
        app:layout_constraintTop_toTopOf="@+id/Button_student"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/Button_student"
        app:layout_constraintHorizontal_chainStyle="packed" />



</android.support.constraint.ConstraintLayout>
